Fix Dynamic logo alignment on small screen in Firefox

--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -25,3 +25,7 @@
         margin-left: 0.4rem;
     }
 }
+
+.imgWrapper {
+    text-align: center;
+}
